--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "moments",
     "description": "A clean responsive design based on MaterializeCSS",
-    "demo": "https://demo.ghost.io",
+    "demo": "https://momentsbymae.com",
     "version": "1.0.0",
     "engines": {
         "ghost": ">=2.0.0",
@@ -20,9 +20,9 @@
         "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn version && git push --follow-tags; fi"
     },
     "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
-        "url": "https://ghost.org"
+        "name": "Aaron Alder",
+        "email": "momentsbymaeshop@gmail.com",
+        "url": "https://momentsbymae.com"
     },
     "gpm": {
         "type": "theme",
@@ -38,7 +38,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/TryGhost/Casper.git"
+        "url": "https://github.com/alderaa/Moments.git"
     },
     "devDependencies": {
         "autoprefixer": "6.3.6",
